syntax = "proto3";

package pb;

option csharp_namespace="pb";

import "result.proto";
import "userinfo.proto";

message GetFriendsRequest {
  string UserID = 1;
}

message GetFriendsResponse {
  Result Result = 1;
  repeated UserInfo Friends = 2;
}